about me and projects first drafts done

--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,5 @@
 @import './stylesheets/app.css';
 @import './stylesheets/homepage.css';
 @import './stylesheets/nav.css';
+@import './stylesheets/about.css';
+@import './stylesheets/projects.css';
