--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -6,7 +6,8 @@ body {
     margin: 0px;
     font-weight: 100;
     font-family: 'Encode Sans SC', sans-serif;
-    background-image: linear-gradient(rgb(3, 4, 94), rgb(0, 129, 172));
+    /* background-image: linear-gradient(rgb(3, 4, 94), rgb(0, 129, 172)); */
+    background-color: rgb(3, 4, 94);
     min-height: 87vh;
     background-size: cover;
     background-repeat: no-repeat;
