--- a/public/style.css
+++ b/public/style.css
@@ -3,3 +3,4 @@
 @import './stylesheets/nav.css';
 @import './stylesheets/about.css';
 @import './stylesheets/projects.css';
+@import './stylesheets/resume.css';
