--- a/public/stylesheets/homepage.css
+++ b/public/stylesheets/homepage.css
@@ -1,38 +1,34 @@
 .homepageMain {
     display: flex;
     flex-direction: column;
-    width: 100%;
+    align-items: flex-start;
+    justify-content: center;
+    flex-wrap: wrap;
+    max-width: 60%;
+    margin-top: 15em; 
+    margin-left: 15em;
+    
+}
+#hello {
+    /* font-family: 'Otomanopee One', sans-serif; */
+    margin: 0px;
 }
 
 #name {
-    text-align: center;
     font-size: 5.5em;
-    color: white;
-    font-weight: lighter;
-    text-shadow: 0px 0px 25px white;
-    margin-top: 150px;
+    opacity: 0.8;
 }
 
-.intro {
-    color: white;
-    text-align: center;
-    max-width: 60%;
-    margin: auto;
-    padding: 30px;
-    font-size: 1.5em;
-    line-height: 1.5em;
+#subtitle {
+    opacity: 0.5;
 }
 
-#hello {
-    font-weight: 500;
-    font-family: 'Otomanopee One', sans-serif;
-}
+
 
 .portfoliobutton {
     color: white;
     text-decoration: none;
     padding: 25px 0px;
-    margin: auto;
     display: block;
     text-align: center;
     width: 20%;
@@ -54,9 +50,9 @@
 }
 
 @media (max-width: 768px) {
-    h1 {
-        font-size: 3.5em;
-        margin-top: 75px;
+    #name {
+        font-size: 2.5em;
+        margin-top: 2em;
     }
     .intro {
         max-width: 85%;
