--- a/public/stylesheets/nav.css
+++ b/public/stylesheets/nav.css
@@ -6,10 +6,17 @@
     color: white;
 }
 
-#navbarNav {
+/* #navbarNav {
     display: flex;
     width: 100vw;
     justify-content: flex-end;
     align-items: center;
     font-size: 1.6em;
+} */
+
+.navbar-toggler{
+    /* width: 47px; */
+    /* height: 34px; */
+    background-color: #414143;
 }
+
