updated styling on about page

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -5,9 +5,10 @@
 body {
     margin: 0px;
     font-weight: 100;
-    font-family: 'Encode Sans SC', sans-serif;
+    /* font-family: 'Encode Sans SC', sans-serif; */
     /* background-image: linear-gradient(rgb(3, 4, 94), rgb(0, 129, 172)); */
-    background-color: rgb(3, 4, 94);
+    font-family: 'Lora', serif;
+    background-color: rgb(94, 138, 166);
     min-height: 87vh;
     background-size: cover;
     background-repeat: no-repeat;
