--- a/public/stylesheets/about.css
+++ b/public/stylesheets/about.css
@@ -21,19 +21,32 @@
 
 #about {
     display: inline-block;
-    font-size: 2em;
+    font-size: 1.5em;
     letter-spacing: 0.2em;
+    color: rgb(183, 156, 167)
+}
+
+.getInTouch {
+    text-decoration: none;
+    color: white;
+    border: 5px solid rgba(36, 135, 170, 0.5);
+    padding: 0.3em;
+}
+
+.getInTouch:hover {
+    color: white;
+    box-shadow: 10px 5px 2px rgba(255, 255, 255, 0.2);
 }
 
 .aboutMeHeadshot {
     margin-left:2em;
     display: flex;
-    align-items: center;
-    justify-content: flex-start;
+    align-items: flex-start;
 }
 
 #headshot {
-    max-height: 20em;
+    /* max-height: 20em; */
+    border-radius: 50%;
 }
 
 .aboutMeDivider {
@@ -45,6 +58,9 @@
     flex-wrap: wrap;
 }
 
+.skillsTitle {
+    color: rgb(183, 156, 167)
+}
 .singleSkill {
     margin: 1em;
     display: flex;
@@ -58,6 +74,8 @@
     font-size: 3em;
     margin-bottom: 0.3em;
 }
+
+
 
 
 @media screen and (max-width: 768px) {
