stacked two work skills so formats better on smaller screens

--- a/public/stylesheets/about.css
+++ b/public/stylesheets/about.css
@@ -68,6 +68,11 @@
     min-width: 10%;
 }
 
+.twoWorkSkill {
+    margin-top: 0em;
+    margin-bottom: 0em;
+}
+
 .singleSkill > i {
     font-size: 3em;
     margin-bottom: 0.3em;
