worked on responsive design for contact page

--- a/public/style.css
+++ b/public/style.css
@@ -4,3 +4,4 @@
 @import './stylesheets/about.css';
 @import './stylesheets/projects.css';
 @import './stylesheets/resume.css';
+@import './stylesheets/contact.css';
