--- a/public/stylesheets/homepage.css
+++ b/public/stylesheets/homepage.css
@@ -45,12 +45,16 @@
         font-size: 2.5em;
         margin-top: 2em;
     }
+    .homepageMain{
+        max-width: 85%;
+        margin-top: 15em; 
+        margin-left: 2em;
+    }
     .intro {
         max-width: 85%;
     }
 
     .portfoliobutton {
-        width: 60%;
         margin-top: 50px;
         font-size: 1.2em
     }
