fixed bug in responsive design so drop down doesn't automatically show

--- a/public/stylesheets/nav.css
+++ b/public/stylesheets/nav.css
@@ -1,12 +1,26 @@
+.fa-bars {
+    font-size: 2em;
+    color: white;
+    /* background-color: rgba(183, 156, 167, 0.5); */
+    padding: 0.2em;
+    border-radius: 0.2em;
+}
+
 .navbar {
     background-color: rgb(94, 138, 166);
+    margin-top: 0em;
+    padding-top: 0em;
+    padding-bottom: 0em;
+}
+
+.navbar-brand {
+    padding-top: 0em;
 }
 
 .nav-link {
     color: white;
+    font-size: 1.5em;
+    margin-right: 1.8em;
 }
 
-.navbar-toggler{
-    background-color: #414143;
-}
 
