--- a/public/stylesheets/nav.css
+++ b/public/stylesheets/nav.css
@@ -22,4 +22,9 @@
     margin-right: 1.8em;
 }
 
+.nav-link:hover {
+    color: darkgray;
+    text-decoration: underline;
+    text-underline-offset: 0.5em;
+}
 
