--- a/public/stylesheets/about.css
+++ b/public/stylesheets/about.css
@@ -35,7 +35,7 @@
 
 .getInTouch:hover {
     color: white;
-    /* box-shadow: 10px 5px 12px rgba(255, 255, 255, 0.2); */
+    transform: translateY(0.1em);
     box-shadow: 10px 5px 12px rgba(36, 135, 170, 0.5);
 }
 
